# human-date-parser

./: CHANGELOG.md  Cargo.toml  Missing phrases.md  ROADMAP.md  Readme.md
examples/: stdin.rs
src/: ast.rs  date_time.pest  lib.rs  tests.rs
src/snapshots/: human_date_parser__tests__parse__in_in_2_hours.snap  human_date_parser__tests__parse__in_in_3_days.snap  human_date_parser__tests__parse__in_in_5_minutes_and_30_seconds.snap  human_date_parser__tests__parse_ago_10_hours_and_5_minutes_ago.snap  human_date_parser__tests__parse_ago_10_seconds_ago.snap  human_date_parser__tests__parse_ago_1_year_1_month_1_week_1_day_1_hour_1_minute_and_1_second_ago.snap  human_date_parser__tests__parse_ago_1_years_2_months_3_weeks_5_days_8_hours_17_minutes_and_45_seconds_ago.snap  human_date_parser__tests__parse_ago_2_hours_32_minutes_and_7_seconds_ago.snap  human_date_parser__tests__parse_date_02_03_2010.snap  human_date_parser__tests__parse_date_07112014.snap  human_date_parser__tests__parse_date_13_november.snap  human_date_parser__tests__parse_date_15_feb_2017.snap  human_date_parser__tests__parse_date_1_2_2020.snap  human_date_parser__tests__parse_date_20240303.snap  human_date_parser__tests__parse_date_332024.snap  human_date_parser__tests__parse_date_last_tuesday.snap  human_date_parser__tests__parse_date_monday.snap  human_date_parser__tests__parse_date_next_friday.snap  human_date_parser__tests__parse_date_this_monday.snap  human_date_parser__tests__parse_date_time_1325_next_tuesday.snap  human_date_parser__tests__parse_date_time_1520_friday.snap  (+21 more)
