[package]
name = "human_date_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
pest = "2"
pest_derive = "2"

[dev-dependencies]
concat-idents = { git = "https://github.com/technologicalMayhem/concat-idents" }
insta = "1.26.0"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
